k8s/applications/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.31.2
          ports:
            - name: ingress
              containerPort: 8080
          volumeMounts:
            - name: filebrowser
              mountPath: /database.db
              subPath: filebrowser.db
            - name: filebrowser
              mountPath: /filebrowser.json
              subPath: filebrowser.json
            - name: backup
              mountPath: /srv/backup
            - name: media
              mountPath: /srv/media
      volumes:
        - name: filebrowser
          persistentVolumeClaim:
            claimName: filebrowser
        - name: backup
          persistentVolumeClaim:
            claimName: backup
        - name: media
          persistentVolumeClaim:
            claimName: media
